# fast-krippendorff

./: .gitignore  .travis.yml  LICENSE.txt  README.md  pyproject.toml  sample.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml  pythonpackage.yml  pythonpublish.yml
krippendorff/: __init__.py  krippendorff.py
