[tool.poetry]
name = "krippendorff"
version = "0.6.1"
description = "Fast computation of the Krippendorff's alpha measure."
authors = ["Santiago Castro <sacastro@fing.edu.uy>"]
license = "GPL-3.0-or-later"

readme = "README.md"

homepage = "https://github.com/pln-fing-udelar/fast-krippendorff"
repository = "https://github.com/pln-fing-udelar/fast-krippendorff"

keywords = ["Krippendorff", "alpha", "agreement", "reliability", "coding", "coders", "units", "values"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.9,<3.13"  # Specify an upper limit, otherwise newer NumPy versions can't be installed.
numpy = "^1.21"  # For NumPy Typing.

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7"

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"
