[bdist_wheel]
universal = 1

[metadata]
name = krippendorff
version = 0.3.3-unreleased
description = Fast computation of the Krippendorff's alpha measure.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pln-fing-udelar/fast-krippendorff
keywords = Krippendorff, alpha, agreement, reliability, coding, coders, units, values
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
author = Santiago Castro
author_email = sacastro@fing.edu.uy
maintainer = Santiago Castro
maintainer_email = sacastro@fing.edu.uy
license = GPL 3.0
license_file = LICENSE.txt

[options]
packages = find:
install_requires =
  numpy
python_requires = >=3.5.0
